--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.4.0",
+        "bootstrap-icons": "^1.10.5",
         "vue": "^3.2.47",
         "vue-multiselect": "^2.1.7"
     }
